// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryDetails /> renders when data is loaded 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2"
>
  <div
    className="MuiCardHeader-root-28"
  >
    <div
      className="MuiCardHeader-content-31"
    >
      <span
        className="MuiTypography-root-34 MuiTypography-headline-39 MuiCardHeader-title-32"
      >
        Books
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root-58"
  >
    <p
      className="MuiTypography-root-34 MuiTypography-body1-43"
    >
      Girl remain increase quite. More opportunity special special life foot employee. Wall employee all relate control cause need.
    </p>
  </div>
  <div
    className="MuiCardActions-root-59"
  >
    <a
      className="MuiButtonBase-root-76 MuiButton-root-61 MuiButton-flatSecondary-64 MuiCardActions-action-60"
      href="/categories/Q2F0ZWdvcnk6NA==/edit/"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-62"
      >
        Edit
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </a>
    <button
      className="MuiButtonBase-root-76 MuiButton-root-61 MuiButton-flatSecondary-64 MuiCardActions-action-60"
      disabled={false}
      onBlur={[Function]}
      onClick={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-62"
      >
        Delete
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;

exports[`<CategoryDetails /> renders while data is loading 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2"
>
  <div
    className="MuiCardHeader-root-28"
  >
    <div
      className="MuiCardHeader-content-31"
    >
      <span
        className="MuiTypography-root-34 MuiTypography-headline-39 MuiCardHeader-title-32"
      >
        
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root-58"
  >
    <p
      className="MuiTypography-root-34 MuiTypography-body1-43"
    >
      
    </p>
  </div>
  <div
    className="MuiCardActions-root-59"
  >
    <a
      className="MuiButtonBase-root-76 MuiButton-root-61 MuiButton-flatSecondary-64 MuiCardActions-action-60"
      href="/"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-62"
      >
        Edit
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </a>
    <button
      className="MuiButtonBase-root-76 MuiButton-root-61 MuiButton-flatSecondary-64 MuiCardActions-action-60"
      disabled={false}
      onBlur={[Function]}
      onClick={[MockFunction]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-62"
      >
        Delete
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;
